--- a/index.html
+++ b/index.html
@@ -1,205 +1,358 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-
-<head>
+  <head>
     <!-- Основные мета-теги -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Сантехник Челябинск: установка унитаза, замена водосчётчиков, монтаж ванн, разводка воды и отопление. Бесплатный выезд мастера.">
-    <meta name="keywords" content="сантехник Челябинск, сантехнические услуги, замена счётчиков, установка ванн, монтаж отопления, ремонт ванной, вызов мастера">
-    <meta name="author" content="Сантехник Челябинск">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Сантехник Челябинск: установка унитаза, замена водосчётчиков, монтаж ванн, разводка воды и отопление. Бесплатный выезд мастера."
+    />
+    <meta
+      name="keywords"
+      content="сантехник Челябинск, сантехнические услуги, замена счётчиков, установка ванн, монтаж отопления, ремонт ванной, вызов мастера"
+    />
+    <meta name="author" content="Сантехник Челябинск" />
 
-    <title>Сантехнические работы и отопление в Челябинске<br> – установка, замена, ремонт</title>
+    <title>
+      Сантехнические работы и отопление в Челябинске<br> – установка, замена,
+      ремонт
+    </title>
 
     <!-- Фавиконы -->
-    <link type="image/x-icon" rel="shortcut icon" href="https://santehnika-74.ru/assets/img/favicon.ico">
-    <link type="image/png" sizes="16x16" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-16x16.png">
-    <link type="image/png" sizes="32x32" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-32x32.png">
-    <link type="image/png" sizes="96x96" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-96x96.png">
-    <link type="image/png" sizes="120x120" rel="icon" href="https://santehnika-74.ru/assets/img/favicon-120x120.png">
-    <link rel="apple-touch-icon" href="https://santehnika-74.ru/assets/img/favicon-120x120.png">
+    <link
+      type="image/x-icon"
+      rel="shortcut icon"
+      href="https://santehnika-74.ru/assets/img/favicon.ico"
+    />
+    <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="https://santehnika-74.ru/assets/img/favicon-16x16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="https://santehnika-74.ru/assets/img/favicon-32x32.png"
+    />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="https://santehnika-74.ru/assets/img/favicon-96x96.png"
+    />
+    <link
+      type="image/png"
+      sizes="120x120"
+      rel="icon"
+      href="https://santehnika-74.ru/assets/img/favicon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://santehnika-74.ru/assets/img/favicon-120x120.png"
+    />
 
     <!-- Соцсети: Open Graph (Facebook, VK, Telegram) -->
-    <meta property="og:title" content="Сантехнические работы и отопление в Челябинске">
-    <meta property="og:description" content="Быстрая помощь сантехника: установка унитаза, замена водосчётчиков, монтаж ванн и разводка воды.">
-    <meta property="og:image" content="https://santehnika-74.ru/assets/img/hero-image.jpg">
-    <meta property="og:url" content="https://santehnika-74.ru/">
-    <meta property="og:type" content="website">
+    <meta
+      property="og:title"
+      content="Сантехнические работы и отопление в Челябинске"
+    />
+    <meta
+      property="og:description"
+      content="Быстрая помощь сантехника: установка унитаза, замена водосчётчиков, монтаж ванн и разводка воды."
+    />
+    <meta
+      property="og:image"
+      content="https://santehnika-74.ru/assets/img/hero-image.jpg"
+    />
+    <meta property="og:url" content="https://santehnika-74.ru/" />
+    <meta property="og:type" content="website" />
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Сантехнические работы и отопление в Челябинске">
-    <meta name="twitter:description" content="Быстрая помощь сантехника: установка унитаза, замена водосчётчиков, монтаж ванн и разводка воды.">
-    <meta name="twitter:image" content="https://santehnika-74.ru/assets/img/hero-image.jpg">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Сантехнические работы и отопление в Челябинске"
+    />
+    <meta
+      name="twitter:description"
+      content="Быстрая помощь сантехника: установка унитаза, замена водосчётчиков, монтаж ванн и разводка воды."
+    />
+    <meta
+      name="twitter:image"
+      content="https://santehnika-74.ru/assets/img/hero-image.jpg"
+    />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://santehnika-74.ru/">
+    <link rel="canonical" href="https://santehnika-74.ru/" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <link rel="stylesheet" href="./style.css" />
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Plumber",
+        "name": "Сантехник Челябинск",
+        "image": "https://santehnika-74.ru/assets/img/hero-image.jpg",
+        "description": "Установка унитаза, замена водосчётчиков, монтаж ванн, разводка воды и отопление. Бесплатный выезд мастера.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Челябинск",
+          "streetAddress": "ул. Примерная, д.1"
+        },
+        "telephone": "+7-908-049-31-34",
+        "url": "https://santehnika-74.ru"
+      }
+    </script>
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
     <header>
-        <div class="logo"><strong>Сантехнические работы и отопление! Челябинск</strong></div>
-        <nav>
-            <a href="#services" class="nav-link">🛠 Услуги</a>
-            <a href="#about" class="nav-link">ℹ О нас</a>
-            <a href="#contacts" class="nav-link">📍 Контакты</a>
-        </nav>
-        <a href="tel:89080493134" class="btn phone-btn">
-            <span class="icon">📞</span> Вызвать мастера
-        </a>
-        
-        <!-- Yandex.Metrika counter -->
-        <script type="text/javascript">
-            (function (m, e, t, r, i, k, a) {
-                m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-                m[i].l = 1 * new Date();
-                for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
-                k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-            })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js?id=104005738', 'ym');
+      <div class="logo">
+        <strong>Сантехнические работы и отопление! Челябинск</strong>
+      </div>
+      <nav>
+        <a href="#services" class="nav-link">🛠 Услуги</a>
+        <a href="#about" class="nav-link">ℹ О нас</a>
+        <a href="#contacts" class="nav-link">📍 Контакты</a>
+      </nav>
+      <a href="tel:89080493134" class="btn phone-btn">
+        <span class="icon">📞</span> Вызвать мастера
+      </a>
 
-            ym(104005738, 'init', { ssr: true, webvisor: true, clickmap: true, ecommerce: "dataLayer", accurateTrackBounce: true, trackLinks: true });
-        </script>
-        <noscript>
-            <div><img src="https://mc.yandex.ru/watch/104005738" style="position:absolute; left:-9999px;" alt="" />
-            </div>
-        </noscript>
-        <!-- /Yandex.Metrika counter -->
+      <!-- Yandex.Metrika counter -->
+      <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+          m[i] =
+            m[i] ||
+            function () {
+              (m[i].a = m[i].a || []).push(arguments);
+            };
+          m[i].l = 1 * new Date();
+          for (var j = 0; j < document.scripts.length; j++) {
+            if (document.scripts[j].src === r) {
+              return;
+            }
+          }
+          (k = e.createElement(t)),
+            (a = e.getElementsByTagName(t)[0]),
+            (k.async = 1),
+            (k.src = r),
+            a.parentNode.insertBefore(k, a);
+        })(
+          window,
+          document,
+          "script",
+          "https://mc.yandex.ru/metrika/tag.js?id=104005738",
+          "ym",
+        );
+
+        ym(104005738, "init", {
+          ssr: true,
+          webvisor: true,
+          clickmap: true,
+          ecommerce: "dataLayer",
+          accurateTrackBounce: true,
+          trackLinks: true,
+        });
+      </script>
+      <noscript>
+        <div>
+          <img
+            src="https://mc.yandex.ru/watch/104005738"
+            style="position: absolute; left: -9999px"
+            alt=""
+          />
+        </div>
+      </noscript>
+      <!-- /Yandex.Metrika counter -->
     </header>
 
     <!-- Hero -->
     <section class="hero">
-        <h1>Сантехника и отопление в Челябинске<br> – установка, замена, ремонт</h1>
-        <p>«Бесплатная помощь прямо сейчас! 📞»<br>
-            Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br> Нажмите кнопку и получите быстрый совет
-            от
-            профессионалов. <br>Решение рядом — действуйте прямо сейчас!</p>
+      <h1>
+        Сантехника и отопление в Челябинске<br />
+        – установка, замена, ремонт
+      </h1>
+      <p>
+        «Бесплатная помощь прямо сейчас! 📞»<br />
+        Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br />
+        Нажмите кнопку и получите быстрый совет от профессионалов. <br />Решение
+        рядом — действуйте прямо сейчас!
+      </p>
 
-        <!-- Кнопка с ценой -->
-        <a href="tel:89080493134" class="btn vk-btn" aria-label="Позвонить мастеру сантехнику">
-            <span class="icon" aria-hidden="true">📞</span> Вызвать мастера
-        </a>
+      <!-- Кнопка с ценой -->
+      <a
+        href="tel:89080493134"
+        class="btn vk-btn"
+        aria-label="Позвонить мастеру сантехнику"
+      >
+        <span class="icon" aria-hidden="true">📞</span> Вызвать мастера
+      </a>
 
-        <a href="https://vk.com/public101886759" target="_blank" rel="noopener noreferrer" class="btn vk-btn"
-            aria-label="Группа ВКонтакте">
-            <span class="icon" aria-hidden="true">🔵</span> Наша активная группа ВКонтакте – присоединяйтесь!
-        </a>
+      <a
+        href="https://vk.com/public101886759"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="btn vk-btn"
+        aria-label="Группа ВКонтакте"
+      >
+        <span class="icon" aria-hidden="true">🔵</span> Наша активная группа
+        ВКонтакте – присоединяйтесь!
+      </a>
 
-        <!-- Анимация воды -->
-        <div class="water-animation">
-            <span class="drop"></span>
-            <span class="drop"></span>
-            <span class="drop"></span>
-            <span class="drop"></span>
-            <span class="drop"></span>
-        </div>
+      <!-- Анимация воды -->
+      <div class="water-animation">
+        <span class="drop"></span>
+        <span class="drop"></span>
+        <span class="drop"></span>
+        <span class="drop"></span>
+        <span class="drop"></span>
+      </div>
     </section>
 
     <!-- Services -->
     <section id="services" class="services">
-        <h2>Популярные услуги</h2>
-        <div class="service-cards">
-
-            <div class="card water-meter-card">
-                <div class="card-image">
-                    <img src="./assets/img/vodochethick.webp" alt="Замена водосчётчиков">
-                </div>
-                <h3>Замена водосчётчиков</h3>
-                <ul>
-                    <li>1 счётчик – от 600</li>
-                    <li>2 счётчика – от 1000</li>
-                    <li>3 счётчика – от 1500</li>
-                    <li>4 счётчика – от 1900</li>
-                    <li>Стоимость счётчиков – от 1000</li>
-                </ul>
-            </div>
-
-            <div class="card toilet-install-card">
-                <div class="card-image">
-                    <img src="./assets/img/zamenaYnitaza.webp" alt="Замена/установка унитаза">
-                </div>
-                <h3>Замена/установка унитаза</h3>
-                <p>Цена: от 2500</p>
-            </div>
-
-            <div class="card bath-install-card">
-                <div class="card-image">
-                    <img src="./assets/img/ZamenaVanni.webp" alt="Установка ванны">
-                </div>
-                <h3>Установка ванны</h3>
-                <p>Цена: от 2000</p>
-                <h3>Смесители</h3>
-                <p>В ванну: от 1500</p>
-                <p>В раковину: от 2000</p>
-            </div>
-
-            <div class="card water-heater-card">
-                <div class="card-image">
-                    <img src="./assets/img/vodo-nagrevatel.webp" alt="Установка водонагревателя">
-                </div>
-                <h3>Установить водонагреватель</h3>
-                <ul>
-                    <li>Цена: от 2500</li>
-                </ul>
-            </div>
-
-            <div class="card extra-services-card">
-                <h3>Дополнительные услуги</h3>
-                <ul>
-                    <li>Минимальный выезд по работе: от 1000</li>
-                    <li>Инсталляция установить раму: от 2000</li>
-                    <li>Горшок: от 1500</li>
-                    <li>Разводка воды монтаж из полипропилена: от 8000</li>
-                    <li>Замена обвязок раковина и ванна: от 1000</li>
-                </ul>
-            </div>
-
-            <div class="card water-heater-card">
-                <div class="card-image">
-                    <img src="./assets/img/./razvodka-vodi.webp" alt="Разводка воды">
-                </div>
-                <h3>Разводка воды</h3>
-                <ul>
-                    <li>Цена: от 3000</li>
-                </ul>
-            </div>
-
+      <h2>Популярные услуги</h2>
+      <div class="service-cards">
+        <div class="card water-meter-card">
+          <div class="card-image">
+            <img
+              src="./assets/img/vodochethick.webp"
+              alt="Сантехник Челябинск — замена водосчётчиков"
+            />
+          </div>
+          <h3>Замена водосчётчиков</h3>
+          <ul>
+            <li>1 счётчик – от 600</li>
+            <li>2 счётчика – от 1000</li>
+            <li>3 счётчика – от 1500</li>
+            <li>4 счётчика – от 1900</li>
+            <li>Стоимость счётчиков – от 1000</li>
+          </ul>
         </div>
+
+        <div class="card toilet-install-card">
+          <div class="card-image">
+            <img
+              src="./assets/img/zamenaYnitaza.webp"
+              alt="Сантехник Челябинск — установка и замена унитаза"
+            />
+          </div>
+          <h3>Замена/установка унитаза</h3>
+          <p>Цена: от 2500</p>
+        </div>
+
+        <div class="card bath-install-card">
+          <div class="card-image">
+            <img
+              src="./assets/img/ZamenaVanni.webp"
+              alt="Сантехник Челябинск — установка ванны"
+            />
+          </div>
+          <h3>Установка ванны</h3>
+          <p>Цена: от 2000</p>
+          <h3>Смесители</h3>
+          <p>В ванну: от 1500</p>
+          <p>В раковину: от 2000</p>
+        </div>
+
+        <div class="card water-heater-card">
+          <div class="card-image">
+            <img
+              src="./assets/img/vodo-nagrevatel.webp"
+              alt="Сантехник Челябинск — установка водонагревателя"
+            />
+          </div>
+          <h3>Установить водонагреватель</h3>
+          <ul>
+            <li>Цена: от 2500</li>
+          </ul>
+        </div>
+
+        <div class="card extra-services-card">
+          <h3>Дополнительные услуги</h3>
+          <ul>
+            <li>Минимальный выезд по работе: от 1000</li>
+            <li>Инсталляция установить раму: от 2000</li>
+            <li>Горшок: от 1500</li>
+            <li>Разводка воды монтаж из полипропилена: от 8000</li>
+            <li>Замена обвязок раковина и ванна: от 1000</li>
+          </ul>
+        </div>
+
+        <div class="card water-heater-card">
+          <div class="card-image">
+            <img
+              src="./assets/img/./razvodka-vodi.webp"
+              alt="Сантехник Челябинск — разводка воды по квартире"
+            />
+          </div>
+          <h3>Разводка воды</h3>
+          <ul>
+            <li>Цена: от 3000</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <!-- About -->
     <section id="about" class="about">
-        <h2>О компании</h2>
-        <p>Более 10 лет выполняем сантехнические работы в Челябинске: монтаж и демонтаж радиаторов, разводка воды из
-            полипропилена, установка и ремонт санфаянса. Гарантия на все работы, официальные договоры. с 10:00 до 19:00.
-        </p>
+      <h2>О компании</h2>
+      <p>
+        Более 10 лет выполняем сантехнические работы в Челябинске: монтаж и
+        демонтаж радиаторов, разводка воды из полипропилена, установка и ремонт
+        санфаянса. Гарантия на все работы, официальные договоры. с 10:00 до
+        19:00.
+      </p>
     </section>
 
     <!-- Footer -->
     <!-- Footer -->
     <footer id="contacts">
-        <div class="grid">
-            <div>
-                <h2>Контакты</h2>
-                <p>Тел: <a href="tel:89080493134" style="color:#fff; text-decoration:none;">8 (908) 049-31-34</a></p>
-                <p>Тел: <a href="tel:235-00-67" style="color:#fff; text-decoration:none;">235-00-67</a></p>
-                <p>
-                    <a href="https://vk.com/public101886759" target="_blank" rel="noopener noreferrer" class="vk-link">
-                        <img src="./assets/img/vkIcon.svg" alt="ВКонтакте" width="22" height="22">
-                    </a>
-                </p>
-                <p>Работаем в Челябинске и пригороде!</p>
-            </div>
-            <div>
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample&source=constructor"
-                    height="200"></iframe>
-            </div>
+      <div class="grid">
+        <div>
+          <h2>Контакты</h2>
+          <p>
+            Тел:
+            <a href="tel:89080493134" style="color: #fff; text-decoration: none"
+              >8 (908) 049-31-34</a
+            >
+          </p>
+          <p>
+            Тел:
+            <a href="tel:235-00-67" style="color: #fff; text-decoration: none"
+              >235-00-67</a
+            >
+          </p>
+          <p>
+            <a
+              href="https://vk.com/public101886759"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="vk-link"
+            >
+              <img
+                src="./assets/img/vkIcon.svg"
+                alt="ВКонтакте"
+                width="22"
+                height="22"
+              />
+            </a>
+          </p>
+          <p>Работаем в Челябинске и пригороде!</p>
         </div>
+        <div>
+          <iframe
+            src="https://yandex.ru/map-widget/v1/?um=constructor%3Aexample&source=constructor"
+            height="200"
+          ></iframe>
+        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
