--- a/index.html
+++ b/index.html
@@ -175,25 +175,38 @@
     </header>
 
     <!-- Hero -->
-   <!-- Hero -->
-<section class="hero">
-  <h1>
-    Сантехника и отопление в Челябинске – установка, замена, ремонт
-  </h1>
-  <p>
-    Бесплатная помощь прямо сейчас! 📞<br>
-    Есть проблема с сантехникой? Решение рядом — действуйте прямо сейчас!
-  </p>
+    <section class="hero">
+      <h1>
+        Сантехника и отопление в Челябинске<br />
+        – установка, замена, ремонт
+      </h1>
+      <p>
+        «Бесплатная помощь прямо сейчас! 📞»<br />
+        Есть проблема с сантехникой? Не ждите, пока она станет ещё хуже.<br />
+        Нажмите кнопку и получите быстрый совет от профессионалов. <br />Решение
+        рядом — действуйте прямо сейчас!
+      </p>
 
-  <a href="tel:89080493134" class="btn phone-btn" aria-label="Позвонить мастеру">
-    <span class="icon">📞</span> Вызвать мастера
-  </a>
+      <!-- Кнопка с ценой -->
+      <a
+        href="tel:89080493134"
+        class="btn vk-btn"
+        aria-label="Позвонить мастеру сантехнику"
+      >
+        <span class="icon" aria-hidden="true">📞</span> Вызвать мастера
+      </a>
 
-  <a href="https://vk.com/public101886759" target="_blank" rel="noopener noreferrer" class="btn vk-btn" aria-label="Группа ВКонтакте">
-    <span class="icon">🔵</span> Присоединяйтесь в ВКонтакте
-  </a>
-</section>
-
+      <a
+        href="https://vk.com/public101886759"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="btn vk-btn"
+        aria-label="Группа ВКонтакте"
+      >
+        <span class="icon" aria-hidden="true">🔵</span> Наша активная группа
+        ВКонтакте – присоединяйтесь!
+      </a>
+    </section>
 
     <!-- Services -->
     <section id="services" class="services">
