--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Сантехник Челябинск" />
 
     <title>
-      Сантехнические работы и отопление в Челябинске<br> – установка, замена,
+      Сантехнические работы и отопление в Челябинске – установка, замена,
       ремонт
     </title>
 
