--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <meta name="author" content="Сантехник Челябинск" />
 
     <title>
-      Сантехнические работы и отопление в Челябинске – установка, замена,
-      ремонт
+      Сантехнические работы и отопление в Челябинске – установка, замена, ремонт
     </title>
 
     <!-- Фавиконы -->
     <link
-      type="image/x-icon"
-      rel="shortcut icon"
-      href="https://santehnika-74.ru/assets/img/favicon.ico"
+      rel="icon"
+      type="image/svg+xml"
+      href="https://santehnika-74.ru/assets/img/favicon.svg"
     />
+
     <link
       type="image/png"
       sizes="16x16"
